trying to fix image on mobile site

--- a/blocbox/static/blocbox/css/jb_bootstrap_customization.css
+++ b/blocbox/static/blocbox/css/jb_bootstrap_customization.css
@@ -125,7 +125,7 @@ body {
 	h2{
 		font-size: 2em; 
 	}
-	.navbar-header > a > img {height: 50; width: 200; }
+	.navbarimage {height: 40; width: 200; }
 }
 
 /*JMY experimenting with min-height container*/
